# Shifty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
res/: config.json
res/home/: home.html  styles.css
res/shaders/: UIRect.hlsl  compile.sh  triangle.frag.msl  triangle.vert.msl
src/: CommandPalette.cpp  CommandPalette.h  Drawing.cpp  Drawing.h  EventBus.cpp  EventBus.h  Events.h  GlobalConfig.cpp  GlobalConfig.h  InputHandler.cpp  InputHandler.h  Layout.cpp  Layout.h  Main.cpp  Prefabs.cpp  Prefabs.h  ShiftyApp.cpp  ShiftyApp.h  Text.cpp  Text.h  TextRenderer.cpp  TextRenderer.h  Tween.cpp  Tween.h  View.cpp  View.h  main.cpp
src/Components/: Animation.cpp  Animation.h  App.cpp  App.h  CommandPalette.cpp  CommandPalette.h  Draw.cpp  Draw.h  Edit.h  Focus.cpp  Focus.h  InputHandler.cpp  InputHandler.h  Layout.cpp  Layout.h  Panel.h  Parent.cpp  Parent.h  RenderTransform.cpp  RenderTransform.h  Root.h  Selectable.h  Tab.h  TabViewState.h  TabviewState.h  Text.cpp  Text.h  TextEdit.cpp  TextEdit.h  Transform.cpp  Transform.h  View.cpp  View.h
src/ECS/: Archetype.cpp  Archetype.h  Component.cpp  Component.h  Entity.cpp  Entity.h  System.cpp  System.h  Type.cpp  Type.h
src/Modules/Config/: CMakeLists.txt  GlobalConfig.cpp  GlobalConfig.h
src/Modules/Drawing/: CMakeLists.txt  DrawSystem.cpp  TextRenderer.cpp  TextRenderer.h  Tween.h
src/Modules/Drawing/Components/: Draw.h  RenderTransform.h
src/Modules/Drawing/Systems/: DrawCreate.cpp  DrawCreate.h  DrawRender.cpp  DrawRender.h  DrawResize.cpp  DrawResize.h  DrawSystem.cpp  DrawSystem.h
src/Modules/ECS/: Archetype.h  CMakeLists.txt  Component.h  Entity.cpp  Entity.h  System.h
src/Modules/EventBus/: CMakeLists.txt  EventBus.cpp  EventBus.h  StandardEvents.h
src/Modules/Hierarchy/: CMakeLists.txt
src/Modules/Hierarchy/Components/: Hierarchy.h
src/Modules/Hierarchy/Systems/: HierarchySystem.cpp  HierarchySystem.h
src/Modules/LLR/: CMakeLists.txt  Color.cpp  Color.h  CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  Download.cpp  Download.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TransferBuffer.cpp  TransferBuffer.h  Viewport.h
src/Modules/LLR/Mac/: Compatibility.hpp
src/Modules/Platform/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  IBlurManager.cpp  IBlurManager.h  Window.cpp  Window.h
src/Modules/Platform/Linux/: Blur.h  LinuxBackend.cpp  LinuxBackend.h
src/Modules/Platform/Mac/: Compatibility.mm
src/Modules/Platform/MacOS/: Blur.mm  MacOSBackend.cpp  MacOSBackend.h
src/Modules/Shifty/: CMakeLists.txt
src/Modules/Shifty/App/: CMakeLists.txt
src/Modules/Shifty/App/Components/: App.h
src/Modules/Shifty/App/Systems/: AppClose.cpp  AppClose.h  AppCreate.cpp  AppCreate.h  AppUpdate.cpp  AppUpdate.h
src/Modules/Shifty/CommandPalette/: CMakeLists.txt
src/Modules/Shifty/CommandPalette/Components/: CommandPalette.h
src/Modules/Shifty/CommandPalette/Systems/: CommandPaletteDraw.cpp  CommandPaletteDraw.h  CommandPaletteExpansionUpdate.cpp  CommandPaletteExpansionUpdate.h  CommandPaletteKeydown.cpp  CommandPaletteKeydown.h  CommandPaletteUpdate.cpp  CommandPaletteUpdate.h
src/Modules/Shifty/Panes/: CMakeLists.txt  Prefab.cpp  Prefab.h
src/Modules/Shifty/Panes/Components/: Pane.h  Root.h
src/Modules/Shifty/Panes/Systems/: PaneAnimationUpdate.cpp  PaneAnimationUpdate.h  PaneDraw.cpp  PaneDraw.h
src/Modules/Shifty/Systems/: OnStart.cpp  OnStart.h  TabCommand.cpp  TabCommand.h
src/Modules/Shifty/Tabs/: CMakeLists.txt  Prefab.cpp  Prefab.h
src/Modules/Shifty/Tabs/Components/: Tab.h  TabviewState.h
src/Modules/Shifty/Tabs/Systems/: TabDraw.cpp  TabDraw.h  TabviewClick.cpp  TabviewClick.h  TabviewDraw.cpp  TabviewDraw.h  TabviewKeydown.cpp  TabviewKeydown.h  TabviewShared.cpp  TabviewUpdate.cpp  TabviewUpdate.h
src/Modules/Text/: CMakeLists.txt  Font.cpp  Font.h  TextRenderer.cpp  TextRenderer.h
src/Modules/UI/: CMakeLists.txt  Prefabs.cpp  Prefabs.h
src/Modules/UI/Components/: Focus.h  Motion.h  Text.h  Transform.h
src/Modules/UI/Systems/: AnimationUpdate.cpp  AnimationUpdate.h  EditShared.cpp  EditShared.h  FocusUpdate.cpp  FocusUpdate.h  MotionUpdate.cpp  MotionUpdate.h  RenderTransformsCompute.cpp  RenderTransformsCompute.h  SelectableMousePress.cpp  SelectableMousePress.h  TextDraw.cpp  TextDraw.h  TextEditSystems.cpp  TextEditSystems.h
src/Rendering/: Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Rendering/Mac/: Compatibility.hpp  Compatibility.mm  Vibrancy.mm
src/Systems/: AnimationUpdate.cpp  AnimationUpdate.h  AppCreate.cpp  AppCreate.h  AppUpdate.cpp  AppUpdate.h  ColorRectDraw.cpp  ColorRectDraw.h  CommandPaletteExpansionUpdate.cpp  CommandPaletteExpansionUpdate.h  CommandPaletteKeydown.cpp  CommandPaletteUpdate.cpp  CommandPaletteUpdate.h  DrawCreate.cpp  DrawCreate.h  DrawRender.cpp  DrawRender.h  DrawResize.cpp  DrawResize.h  FocusUpdate.cpp  FocusUpdate.h  MotionUpdate.cpp  MotionUpdate.h  OnStart.cpp  OnStart.h  PanelAnimationUpdate.cpp  PanelAnimationUpdate.h  RenderTransformsCompute.cpp  RenderTransformsCompute.h  SelectableMousePress.cpp  SplitCommand.cpp  TabViewSystems.cpp  TabViewSystems.h  TabViewUpdate.cpp  TabViewUpdate.h  TabviewUpdate.cpp  TabviewUpdate.h  TextDraw.cpp  TextDraw.h  TextEditSystems.cpp  (+7 more)
src/Systems/Commands/: SplitCommand.cpp  SplitCommand.h  TabCommand.cpp  TabCommand.h
src/Systems/Groups/: EditSystemGroup.h  TabViewSystemGroup.h
src/Systems/Input/: CommandPaletteKeydown.cpp  CommandPaletteKeydown.h  SelectableMousePress.h  TabViewClick.cpp  TabViewClick.h  TabViewKeydown.cpp  TabViewKeydown.h  TabviewClick.cpp  TabviewClick.h  TabviewKeydown.cpp  TabviewKeydown.h
src/Systems/Rendering/: ColorRectDraw.cpp  ColorRectDraw.h  CommandPaletteDraw.cpp  CommandPaletteDraw.h  DrawRender.cpp  DrawRender.h  PanelDraw.cpp  PanelDraw.h  TabDraw.cpp  TabDraw.h  TabviewDraw.cpp  TabviewDraw.h  TextDraw.cpp
src/Systems/Shared/: EditShared.cpp  EditShared.h  TabViewShared.cpp  TabViewShared.h  TabviewShared.cpp  TabviewShared.h
